--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ reth-libmdbx = { git = "https://github.com/paradigmxyz/reth" }
 tempfile = "3.8.1"
 eyre = "0.6.8"
 rand = "0.8.5"
+stats-cli = "3.0.1"
+itertools = "0.11.0"
